--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -3,7 +3,16 @@
 @tailwind utilities;
 
 body {
-	@apply bg-zinc-50 font-montserrat;
+	@apply bg-bg text-white font-montserrat;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	@apply font-space-grotesk;
 }
 
 input {
